src/objects/Product_Configuration__mdt/fields/Part_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_List_Name__c</fullName>
    <label>Part List Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>