src/objects/Product_Configuration__mdt/fields/Segment_Number__c.field-meta.xml
<CustomField>
    <fullName>Segment_Number__c</fullName>
    <label>Segment Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>