src/objects/Product_Configuration__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Part_List_Name__c</columns>
    <columns>RecordType__c</columns>
    <columns>Segment_Number__c</columns>
    <columns>USMO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>